# inf2004_team88

./: README.md
driver/irline/: IR.c  ir_line.c
driver/magnometer/: CMakeLists.txt  magnetometer.c  magnetometer.h
driver/motor/: CMakeLists.txt  motor_encoder.c
driver/ultrasonic/: CMakeLists.txt  ultrasonic.c  ultrasonic.h
driver/wifi/: CMakeLists.txt  Makefile  cgi.h  cmake_install.cmake  htmldata.c  main.c  pico_w_webserver.dis  pico_w_webserver.elf  pico_w_webserver.elf.map  pico_w_webserver.hex  pico_w_webserver.uf2  ssi.h
driver/wifi/html_files/: index.shtml
driver/wifi/pico-sdk/: Makefile  cmake_install.cmake
integration/: CMakeLists.txt  cgi.h  motor_encoder.c
